--- a/templates/cases-by-state.html
+++ b/templates/cases-by-state.html
@@ -8,10 +8,13 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css"rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous" />
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}" />
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
 
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+
   </head>
   <body>
     <!-- Navbar using Bootstrap for easy styling. Docs: https://getbootstrap.com/docs/5.0/components/navbar/  -->
@@ -73,7 +76,7 @@
           </select>
           <br /><br />
           Date:<br />
-          <input type="date" name="date" min="2021-01-01" /><br />
+          <input id="date" type="date" name="date" min="2021-01-01" /><br />
           <button class="btn btn-primary" type="submit" value="Submit">
             Submit
           </button>
@@ -152,6 +155,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
     <script src="{{ url_for('static', filename='table.js') }}"></script>
     <script src="{{ url_for('static', filename='drop_down.js') }}"></script>
+    <script src="{{ url_for('static', filename='scroll.js') }}"></script>
+    <script src="{{ url_for('static', filename='date.js') }}"></script>
 
 
     <footer>
