--- a/templates/index.html
+++ b/templates/index.html
@@ -83,6 +83,7 @@
             Submit
           </button>
         </form>
+        <div class="lds-ring"><div></div><div></div><div></div><div></div></div>
       </div>
       {% if date and state and county %}
       <div class="prediction-box">
@@ -90,11 +91,11 @@
         <h1 class="cases">{{ cases }}</h1>
         <h1 class="fraction">
           <span class="fraction-highlight">{{ percentage }}%</span> of people
-          around your County will have COVID-19 on this date.
+          around your County will have had COVID-19 on this date.
         </h1>
         <h1 class="fraction">
           About <span class="fraction-highlight">{{ fraction }}</span> people
-          around your County will have COVID-19 on this date.
+          around your County will have had COVID-19 on this date.
         </h1>
       </div>
       <div>
@@ -165,6 +166,7 @@
     <script src="{{ url_for('static', filename='drop_down.js') }}"></script>
     <script src="{{ url_for('static', filename='scroll.js') }}"></script>
     <script src="{{ url_for('static', filename='date.js') }}"></script>
+    <script src="{{ url_for('static', filename='click.js') }}"></script>
 
   </body>
 </html>
